--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>
                 TurboWarpの埋め込みコードを生成するジェネレーターです。<br>
                 ScratchやTurboWarpでプロジェクトを開いたときに、URLの後ろに数字があります。その数字がプロジェクトIDです。<br>
-                公式ドキュメントに、どのようなことが出来るのかが詳しく書いてあります。<br>
+                公式ドキュメントに、埋め込みコードの詳細が書いてあります。<br>
                 <a href="https://docs.turbowarp.org/embedding">Embedding | TurboWarp Documentation</a> <br>
                 まだ開発段階です。<br><br>
                 制作者: 52Tellur/テルル<br>
