--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             <p>
                 TurboWarpの埋め込みコードを生成するジェネレーターです。<br>
                 ScratchやTurboWarpでプロジェクトを開いたときに、URLの後ろに数字があります。その数字がプロジェクトIDです。<br>
-                公式ドキュメントに、埋め込みコードの詳細が書いてあります。<br>
-                <a href="https://docs.turbowarp.org/embedding">Embedding | TurboWarp Documentation</a> <br>
+                ↓公式ドキュメントに、埋め込みコードの詳細が書いてあります。<br>
+                <a href="https://docs.turbowarp.org/embedding">Embedding | TurboWarp Documentation</a><br>
                 まだ開発段階です。<br><br>
                 制作者: 52Tellur/テルル<br>
                 制作開始: 2022/02/14<br>
-                最終更新日: 2022/02/14<br>
+                最終更新日: 2022/03/09<br>
             </p>
         </div>
         <div class="space"></div>
