--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <p>width(縦幅)</p>
             <input type="text" spellcheck="false" value="416" id="height">
             <br>
-            <!--<label><input type="checkbox" id="autoplay">Autoplay(自動再生)</label>-->
+            <label><input type="checkbox" id="autoplay">Autoplay(自動再生)</label>
             <br>
             <input type="button" onclick="showMessage()" value="OK" id="OK-button">
         </div>
         <div class="space box">
             <h2>埋め込みコード</h2>
-            <pre id="embedcode">OKを押すと、埋め込みコードを表示します</pre><!--ここに埋め込みコード-->
+            <pre id="embedcode">OKを押すと、埋め込みコードを表示します</pre>
             <h2>プレビュー</h2>
             <div id="embed">OKを押すとプレビューを表示します</div>
         </div>
@@ -53,10 +53,10 @@
                 ScratchやTurboWarpでプロジェクトを開いたときに、URLの後ろに数字があります。その数字がプロジェクトIDです。<br>
                 ↓公式ドキュメントに、埋め込みコードの詳細が書いてあります。<br>
                 <a href="https://docs.turbowarp.org/embedding">Embedding | TurboWarp Documentation</a><br>
-                まだ開発段階です。<br><br>
+                まだ開発途中です。<br><br>
                 制作者: 52Tellur/テルル<br>
                 制作開始: 2022/02/14<br>
-                最終更新日: 2022/03/09<br>
+                最終更新日: 2022/05/14
             </p>
         </div>
         <div class="space"></div>
