--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>width(縦幅)</p>
             <input type="text" spellcheck="false" value="416" id="height">
             <br>
-            <label><input type="checkbox" id="autoplay">Autoplay(自動再生)</label>
+            <!--<label><input type="checkbox" id="autoplay">Autoplay(自動再生)</label>-->
             <br>
             <input type="button" onclick="showMessage()" value="OK" id="OK-button">
         </div>
