--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         <div class="box">
             <h2>プロジェクトID</h2>
             <p>数字のみを入力してください。</p>
-            <input type="text" spellcheck="false" value="382594530" id="URL">
+            <label>https://scratch.mit.edu/projects/<input type="text" spellcheck="false" value="382594530" id="URL"></label>
             <h2>オプション</h2>
             <p>色々調整することができます。</p>
             <p>width(横幅)</p>
             <input type="text" spellcheck="false" value="499" id="width">
             <p>width(縦幅)</p>
             <input type="text" spellcheck="false" value="416" id="height">
+            <p>クラウドホスト</p>
+            <input type="text" spellcheck="false" value="wss://clouddata.turbowarp.org" id="cloud">
             <br>
             <label><input type="checkbox" id="autoplay">Autoplay(自動再生)</label>
             <br>
