--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
             <input type="text" spellcheck="false" value="499" id="width">
             <p>width(縦幅)</p>
             <input type="text" spellcheck="false" value="416" id="height">
-            <!--
             <p>クラウドホスト</p>
             <input type="text" spellcheck="false" value="wss://clouddata.turbowarp.org" id="cloud">
-            -->
-            <div class="space box">
+            <div class="space"></div>
             <label><input type="checkbox" id="autoplay">Autoplay(自動再生)</label>
             <br>
             <input type="button" onclick="showMessage()" value="OK" id="OK-button">
