--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 ScratchやTurboWarpでプロジェクトを開いたときに、URLの後ろに数字があります。その数字がプロジェクトIDです。<br>
                 ↓公式ドキュメントに、埋め込みコードの詳細が書いてあります。<br>
                 <a href="https://docs.turbowarp.org/embedding">Embedding | TurboWarp Documentation</a><br>
-                まだ開発途中です。<br><br>
+                まだ開発途中です。<br>
                 制作者: 52Tellur/テルル<br>
                 制作開始: 2022/02/14<br>
-                最終更新日: 2022/05/14
+                最終更新日: 2022/05/20
             </p>
         </div>
         <div class="space"></div>
