--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <script src="main.js"></script>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VL4E4TM24E"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VL4E4TM24E');
-</script>
     </head>
     <body>
         <header>
@@ -35,7 +26,7 @@
             <p>width(縦幅)</p>
             <input type="text" spellcheck="false" value="416" id="height">
             <p>クラウドホスト</p>
-            <input type="text" spellcheck="false" value="wss://clouddata.turbowarp.org" id="cloud">
+            <input type="text" spellcheck="false" value="wss://clouddata.turbowarp.org" id="cloud_host">
             <div class="space"></div>
             <label><input type="checkbox" id="autoplay">Autoplay(自動再生)</label>
             <br>
